<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fitnessTracker.activities.Activities.UserSettingsActivity">

    <Button
        android:id="@+id/UserSettingsActivitySaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="88dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityHt" />

    <EditText
        android:id="@+id/UserSettingsActivityUserName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UserSettingsActivityAge"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:autofillHints=""
        android:hint="@string/age"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityUserName" />

    <EditText
        android:id="@+id/UserSettingsActivityWtInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:autofillHints=""
        android:hint="@string/Weight"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityAge" />

    <EditText
        android:id="@+id/UserSettingsActivityHt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:autofillHints=""
        android:hint="@string/Height"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSettingsActivityWtInput" />
</androidx.constraintlayout.widget.ConstraintLayout>
