<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="380dp"
    android:layout_height="120dp"
    tools:context=".activities.fragment.ExcerciseFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/ExerciseFragTVBodyPart"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:text="@string/bodyPart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseFragTVName" />

    <TextView
        android:id="@+id/ExerciseFragTVName"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ExerciseFragTVEquipmentUsed"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/equipmentUsed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseFragTVBodyPart" />

    <ImageView
        android:id="@+id/ExerciseFragImageView"
        android:layout_width="138dp"
        android:layout_height="114dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>